colima/Yamls/k8s-gw/fusion-21-k8s-namespace.yaml
# Namespace Definition
apiVersion: v1
kind: Namespace
metadata:
  name: fusion
  labels:
    name: fusion
