colima/Yamls/k8s-gw/fusion-22-k8s-gateway.yaml
# Istio API Gateway for Routing traffic to 
# respective Microservices
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fusion-gateway
  namespace: fusion
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
