colima/Yamls/k8s-gw/fusion-23-k8s-alpha-route.yaml
# Alpha Service Route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fusion-alpha-route
  namespace: fusion
spec:
  parentRefs:
  - name: fusion-gateway
  rules:
  # Default Service: Water - Alpha Service
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: water-alpha-service
      port: 80
      weight: 100
