colima/Yamls/k8s-gw/fusion-23-k8s-cart-route-canary.yaml
# Cart Service Route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fusion-cart-route
  namespace: fusion
spec:
  parentRefs:
  - name: fusion-gateway
  rules:
  # Service 2: Cart Service
  - matches:
    - path:
        type: PathPrefix
        value: /cart
    backendRefs:
    - name: water-cart-service
      port: 80
      weight: 90  # Split the Traffic between v1 & v2. v1 or Blue = 90%
    - name: water-cart-service-green
      port: 80
      weight: 10  # Split the Traffic between v1 & v2. v2 or Green = 10%
