colima/Yamls/k8s-gw/fusion-23-k8s-cart-route-flag.yaml
# Cart Service Route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fusion-cart-route
  namespace: fusion
spec:
  parentRefs:
  - name: fusion-gateway
  rules:
  # Service 2: Cart Service
  # Route to cart-green if User-Agent = Firefox AND PathPrefix = /cart
  - matches:
    # Version v2 is enabled under a specific condition
    - headers:
      - name: User-Agent
        value: .*Firefox.*  # Matches any FireFox browser then v2
      path:
        type: PathPrefix
        value: /cart
    backendRefs:
    - name: water-cart-service-green
      port: 80

  # For all others Route to Version v1 (Blue)
  - matches:
    - path:
        type: PathPrefix
        value: /cart
    backendRefs:
    - name: water-cart-service-blue
      port: 80
