colima/Yamls/k8s-gw/fusion-23-k8s-cart-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fusion-cart-route
  namespace: fusion
spec:
  parentRefs:
  - name: fusion-gateway
  rules:
  # Service 2: Cart Service
  - matches:
    - path:
        type: PathPrefix
        value: /cart
    backendRefs:
    - name: water-cart-service
      port: 80
      weight: 100
