colima/Yamls/k8s-gw/fusion-23-k8s-order-route-ab.yaml
# Order Service Route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fusion-order-route
  namespace: fusion
spec:
  parentRefs:
  - name: fusion-gateway
  rules:
  # Service 3: Order Service
  - matches:
    - path:
        type: PathPrefix
        value: /order
    backendRefs:
    - name: water-order-service
      port: 80
      weight: 30
    - name: water-order-service-v2
      port: 80
      weight: 70
