colima/Yamls/k8s-gw/fusion-23-k8s-order-route-canary.yaml
# Order Service Route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fusion-order-route
  namespace: fusion
spec:
  parentRefs:
  - name: fusion-gateway
  rules:
  # Service 3: Order Service
  - matches:
    - path:
        type: PathPrefix
        value: /order
    backendRefs:
    - name: water-order-service-blue
      port: 80
      weight: 90  # Split the Traffic between v1 & v2. v1 or Blue = 90%
    - name: water-order-service-green
      port: 80
      weight: 10  # Split the Traffic between v1 & v2. v2 or Green = 10%
