colima/Yamls/k8s-gw/fusion-23-k8s-order-route-shadow.yaml
# Order Service Route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fusion-order-route
  namespace: fusion
spec:
  parentRefs:
  - name: fusion-gateway
  rules:
  # Service 3: Order Service
  - matches:
    - path:
        type: PathPrefix
        value: /order
    backendRefs:
    - name: water-order-service-blue
      port: 80
      weight: 100  # Mirror the traffic 100% between v1 and v2
    mirror:
    - name: water-order-service-green
      port: 80
      weight: 100  # Mirror the traffic 100% between v1 and v2
