colima/Yamls/k8s-gw/fusion-23-k8s-product-route-flag.yaml
# Product Service Route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fusion-product-route
  namespace: fusion
spec:
  parentRefs:
  - name: fusion-gateway
  rules:
  # Service 1: Product Service
  # Route to product-green if User-Agent = Firefox AND PathPrefix = /product
  - matches:
    # Version v2 is enabled under a specific condition
    - queryParams:
      - name: browser
        value: "Firefox"  # Matches any FireFox browser then v2
      path:
        type: PathPrefix
        value: /product
    backendRefs:
    - name: water-product-service-green
      port: 80
      weight: 100

  # For all others Route to Version v1 (Blue)
  - matches:
    - path:
        type: PathPrefix
        value: /product
    backendRefs:
    - name: water-product-service-blue
      port: 80
      weight: 100
