colima/Yamls/k8s-gw/fusion-23-k8s-product-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fusion-product-route
  namespace: fusion
spec:
  parentRefs:
  - name: fusion-gateway
  rules:
  # Service 1: Product Service
  - matches:
    - path:
        type: PathPrefix
        value: /product
    backendRefs:
    - name: water-product-service
      port: 80
      weight: 100
